==============
lxml changelog
==============

current
=======

Features added
--------------

* Source distribution now ships with a patched Pyrex

* New C-API function makeElement() to create new elements with text,
  tail, attributes and namespaces

* Reuse original parser flags for XInclude

* Simplified support for handling XSLT processing instructions

Bugs fixed
----------

* Open files and XML strings returned by Python resolvers were not
  closed/freed

* Crash in the IDDict returned by XMLDTDID

* Copying Comments and ProcessingInstructions failed

* Memory leak for external URLs in _XSLTProcessingInstruction.parseXSL()

* Memory leak when garbage collecting tailed root elements

* HTML script/style content was not propagated to .text

* Show text xincluded between text nodes correctly in .text and .tail

* 'integer * objectify.StringElement' operation was not supported


1.1.1 (2006-09-21)
==================

Features added
--------------

* XSLT profiling support (``profile_run`` keyword)

* countchildren() method on objectify.ObjectifiedElement

* Support custom elements for tree nodes in lxml.objectify

Bugs fixed
----------

* lxml.objectify failed to support long data values (e.g., "123L")

* Error messages from XSLT did not reach ``XSLT.error_log``

* Factories objectify.Element() and objectify.DataElement() were missing
  ``attrib`` and ``nsmap`` keyword arguments

* Changing the default parser in lxml.objectify did not update the factories
  Element() and DataElement()

* Let lxml.objectify.Element() always generate tree elements (not data
  elements)

* Build under Windows failed ('\0' bug in patched Pyrex version)


1.1 (2006-09-13)
================

Features added
--------------

* Comments and processing instructions return '<!-- coment -->' and
  '<?pi-target content?>' for repr()

* Parsers are now the preferred (and default) place where element class lookup
  schemes should be registered.  Namespace lookup is no longer supported by