@@ -8,6 +8,8 @@ current
 Features added
 --------------
 
+* Data elements in objectify support repr(), which is now used by dump()
+
 * Source distribution now ships with a patched Pyrex
 
 * New C-API function makeElement() to create new elements with text,
